main.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');


footer {
    font-size: 52px;    
}

.linkedin {
    color: black;
}

.linkedin:hover {
    color: rgb(33, 156, 239);
}

.github {
    color: black;
}

.github:hover {
    color: rgb(33, 156, 239);
}






.home {
    margin-bottom: -19px;
    border: solid red;
    &::before {
        content: "";  
        background-image: url('images/chicago.jpg');
        background-size: cover;
        position: absolute;
        top: 0px;
        right: 0px;
        bottom: 0px;
        left: 0px;
        opacity: 0.60;
    }
} 

.else {
    position: relative;
}

#nav {
    position: fixed;
    width: 100%;
    transition: background-color 0.8s ease-out;
    display: flex;
    justify-content: space-between ;
    padding: 15px;
    font-size: 18px;
    opacity: 0.6;
    color: white;
    text-transform: uppercase;
}

#nav.scroll {
    background-color: white;
    font-size: 15px;
    color: rgb(33, 156, 239);
    opacity: 1;
    max-height: 50px;
}

a {
    font-weight: bold;
    color: white;
    text-decoration: none;
}

a.scroll {
    color: rgb(33, 156, 239);
    opacity: 1;
}

.dropdown:hover .drop-links {
    display: block;
}

.drop-links {
    display: none;
    font-size: 16px;
    padding-top: 20px;
}

.drop-links a {
    display: block;
    color: black
}

.drop-links a:hover {
    color: white;
}

.drop-links a:hover.scroll {
    background-color: #ddd;
}

#about {
    scroll-margin-top: 50px;
}

#drop1.scroll {
    color: black;
    font-size: 13px;
}

#projects {
    scroll-margin-top: 50px;
}

#drop2.scroll {
    color: black;
    font-size: 13px;
}

#i.scroll {
    color: black;
}

#i:hover.scroll {
    color: rgb(33, 156, 239);
}

.intro {
    height: 945px;
}

h1 {
    width: 600px;
}

.intro-text {
    font-size: 75px;
    font-weight: bold;
}

.line {
    border-bottom: solid rgb(33, 156, 239);
    border-width: 3px;
    width: 50px;
    margin-left: 235px;
}

p {
    font-size: 19px;
}

.intro-subtext {
    width: 600px;
}

.more-button {
    background-color: rgb(33, 156, 239);
    border: none;
    color: white;
    padding: 13px 25px;
    text-align: center;
    cursor: pointer;
    border-radius: 36px;
    font-weight: bold;
    font-size: 15px;
}

.more-button:hover {
    background-color: white;
    color: black;
}

.about {
    height: 880px;
    background-color: rgb(33, 156, 239);
    color: white;
}

.line2 {
    border-bottom: solid black;
    border-width: 3px;
    width: 50px;
    margin-left: 1095px;
}

.about-text {
    font-size: 18px;
}

.resume-button {
    background-color: white;
    border: none;
    color: black;
    padding: 13px 25px;
    text-align: center;
    cursor: pointer;
    border-radius: 36px;
    font-weight: bold;
    font-size: 15px;
    margin-right: 15px;
}

.resume-button:hover {
    background-color: black;
    color: white;
}

.projects {
    height: 880px;
    background-color: white;
    border: solid purple;
}

/* 
    Page reload to top of page functionality
    Finalize padding for contact page
    Check chat icon leads to contact page
*/

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}

.contact {
    min-height: 100vh;
    background: #1f242d;
}

.contact h2 {
    font-size: 40px;
    color: #ededed;
    margin-bottom: 10px;
    font-weight: bold;
    text-align: center;
}

.contact form {
    width: 600px;
    text-align: center;
}

form .input-box {
    display: flex;
    justify-content: space-between;
}

.input-box .input-field {
    width: 48.5%;
}

.field .item {
    width: 100%;
    padding: 18px;
    background: transparent;
    border: 2px solid #0ef;
    outline: none;
    border-radius: 6px;
    font-size: 16px;
    color: #ededed;
    margin: 12px 0;
}

.field.error .item {
    border-color: #d93025;
}

.field .item::placeholder {
    color: rgba(255, 255, 255, .3);
}

.field .error-txt {
    font-size: 14.5px;
    color: #d93025;
    text-align: left;
    margin: -5px 0 10px;
    display: none;
}

.field.error .error-txt {
    display: block;
}

form .textarea-field .item {
    resize: none;
}

form .textarea-field .error-txt {
    margin-top: -10px;
}

form button {
    padding: 12px 32px;
    background: #0ef;
    border: none;
    outline: none;
    border-radius: 6px;
    box-shadow: 0 0 10px #0ef;
    font-size: 16px;
    color: #333;
    letter-spacing: 1px;
    font-weight: 600;
    cursor: pointer;
    margin-top: 20px;
    transition: .5s;
}

form button:hover {
    box-shadow: none;
}

